Fix timeline spacing

--- a/src/components/Timeline/Section/styles.module.css
+++ b/src/components/Timeline/Section/styles.module.css
@@ -16,7 +16,7 @@
 }
 
 .month.first {
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 @media screen and (max-width: 767px) {
